--- a/modules/gateway/console/src/main/java/com/l7tech/console/panels/resources/SsgConnectorManagerWindow.form
+++ b/modules/gateway/console/src/main/java/com/l7tech/console/panels/resources/SsgConnectorManagerWindow.form
@@ -16,7 +16,7 @@
         <properties/>
         <border type="none"/>
         <children>
-          <grid id="9538f" layout-manager="GridLayoutManager" row-count="6" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+          <grid id="9538f" layout-manager="GridLayoutManager" row-count="7" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
             <margin top="0" left="0" bottom="0" right="0"/>
             <constraints>
               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -26,7 +26,7 @@
             <children>
               <component id="e7465" class="javax.swing.JButton" binding="closeButton">
                 <constraints>
-                  <grid row="5" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                  <grid row="6" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
                   <text value="C&amp;lose"/>
@@ -69,6 +69,14 @@
                   <text value="&amp;Interfaces"/>
                 </properties>
               </component>
+              <component id="dc390" class="javax.swing.JButton" binding="serviceResolutionButton" default-binding="true">
+                <constraints>
+                  <grid row="5" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties>
+                  <text value="&amp;Service Resolution"/>
+                </properties>
+              </component>
             </children>
           </grid>
         </children>
@@ -91,6 +99,9 @@
         <properties>
           <text value="Conflicts"/>
         </properties>
+        <clientProperties>
+          <displayActionText class="java.lang.String" value="false"/>
+        </clientProperties>
       </component>
     </children>
   </grid>
