--- a/modules/gateway/console/src/main/java/com/l7tech/console/panels/resources/AddWssSecurityTokenPanel.form
+++ b/modules/gateway/console/src/main/java/com/l7tech/console/panels/resources/AddWssSecurityTokenPanel.form
@@ -218,20 +218,11 @@
             <children>
               <component id="853f1" class="javax.swing.JLabel">
                 <constraints>
-                  <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                  <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="9" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
-                  <labelFor value="d7ff1"/>
-                  <text value="Session &amp;Variable Name:"/>
+                  <text value="Session Variable Name:"/>
                 </properties>
-              </component>
-              <component id="d7ff1" class="javax.swing.JTextField" binding="wsscSessionVariableField">
-                <constraints>
-                  <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-                    <preferred-size width="150" height="-1"/>
-                  </grid>
-                </constraints>
-                <properties/>
               </component>
               <vspacer id="5e3d9">
                 <constraints>
@@ -253,6 +244,15 @@
                   </grid>
                 </constraints>
               </vspacer>
+              <grid id="4d808" binding="wsscSessionVariablePanel" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+                <margin top="0" left="0" bottom="0" right="0"/>
+                <constraints>
+                  <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties/>
+                <border type="none"/>
+                <children/>
+              </grid>
             </children>
           </grid>
           <grid id="daec8" layout-manager="GridLayoutManager" row-count="2" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
