--- a/modules/gateway/assertions/FtpRoutingAssertion/src/main/java/com/l7tech/external/assertions/ftprouting/console/resources/FtpRoutingPropertiesDialog.form
+++ b/modules/gateway/assertions/FtpRoutingAssertion/src/main/java/com/l7tech/external/assertions/ftprouting/console/resources/FtpRoutingPropertiesDialog.form
@@ -3,12 +3,9 @@
   <grid id="dc500" binding="_mainPanel" layout-manager="GridLayoutManager" row-count="4" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="8" bottom="0" right="8"/>
     <constraints>
-      <xy x="26" y="23" width="835" height="590"/>
+      <xy x="26" y="23" width="835" height="629"/>
     </constraints>
-    <properties>
-      <minimumSize width="700" height="480"/>
-      <preferredSize width="700" height="480"/>
-    </properties>
+    <properties/>
     <border type="none"/>
     <children>
       <grid id="5d64" layout-manager="GridLayoutManager" row-count="4" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
@@ -435,7 +432,7 @@
           </grid>
           <vspacer id="1a29c">
             <constraints>
-              <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="7" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
+              <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
             </constraints>
           </vspacer>
         </children>
